{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 122,
  "lineage": "a32e9494-7c21-d741-c802-f7811491a9a5",
  "resources": [
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-0de835b97a8d11b2a",
            "description": "Security group for Aurora PostgreSQL cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de835b97a8d11b2a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from allowed security groups",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "daysi-nonprod-aurora-20260309200350612100000002",
            "name_prefix": "daysi-nonprod-aurora-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "aurora",
              "Name": "daysi-nonprod-aurora-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "aurora",
              "Name": "daysi-nonprod-aurora-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-nonprod-alb/ba2645bcf50186e9",
            "arn_suffix": "app/daysi-nonprod-alb/ba2645bcf50186e9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "daysi-nonprod-alb-625642724.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-nonprod-alb/ba2645bcf50186e9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "daysi-nonprod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0933746673215637b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-056f9cd7c771e62e4"
              },
              {
                "subnet_id": "subnet-0a6b24a0dc6303792"
              },
              {
                "subnet_id": "subnet-0ded5e059731352ba"
              }
            ],
            "subnets": [
              "subnet-056f9cd7c771e62e4",
              "subnet-0a6b24a0dc6303792",
              "subnet-0ded5e059731352ba"
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-alb",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-alb",
              "Project": "daysi"
            },
            "vpc_id": "vpc-06eb1211592a51551",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:listener/app/daysi-nonprod-alb/ba2645bcf50186e9/e767f0a65c3d390b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-nonprod-tg/e750c036488054f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:listener/app/daysi-nonprod-alb/ba2645bcf50186e9/e767f0a65c3d390b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-nonprod-alb/ba2645bcf50186e9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Project": "daysi"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.main",
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-nonprod-tg/e750c036488054f8",
            "arn_suffix": "targetgroup/daysi-nonprod-tg/e750c036488054f8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:672626785844:targetgroup/daysi-nonprod-tg/e750c036488054f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:672626785844:loadbalancer/app/daysi-nonprod-alb/ba2645bcf50186e9"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "daysi-nonprod-tg",
            "port": 4010,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-tg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-tg",
              "Project": "daysi"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-0933746673215637b",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0933746673215637b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "daysi-nonprod-alb-20260309203741757500000001",
            "name_prefix": "daysi-nonprod-alb-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-alb-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-alb-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:security-group/sg-011206e24f2db2d3d",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011206e24f2db2d3d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Container port from ALB",
                "from_port": 4010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0933746673215637b"
                ],
                "self": false,
                "to_port": 4010
              }
            ],
            "name": "daysi-nonprod-ecs-20260309203745434500000003",
            "name_prefix": "daysi-nonprod-ecs-",
            "owner_id": "672626785844",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-ecs-sg",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "ecs",
              "Name": "daysi-nonprod-ecs-sg",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bb3ad3332f4fc9b",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-09bb3ad3332f4fc9b",
            "association_id": "eipassoc-05f04b8b2260b97f5",
            "domain": "vpc",
            "id": "eipalloc-09bb3ad3332f4fc9b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0498e645b817e7cfa",
            "private_dns": "ip-10-0-0-58.ec2.internal",
            "private_ip": "10.0.0.58",
            "public_dns": "ec2-54-221-218-13.compute-1.amazonaws.com",
            "public_ip": "54.221.218.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-1",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a88fcb9b36ea06c",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-08a88fcb9b36ea06c",
            "association_id": "eipassoc-07bd5a0689ecbd0f6",
            "domain": "vpc",
            "id": "eipalloc-08a88fcb9b36ea06c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05366248328121faa",
            "private_dns": "ip-10-0-1-229.ec2.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-100-50-165-131.compute-1.amazonaws.com",
            "public_ip": "100.50.165.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-2",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cd0a81961f9eff1",
            "arn": "arn:aws:ec2:us-east-1:672626785844:elastic-ip/eipalloc-01cd0a81961f9eff1",
            "association_id": "eipassoc-0a170f1fb4bb68565",
            "domain": "vpc",
            "id": "eipalloc-01cd0a81961f9eff1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0df3376259a1e6e2b",
            "private_dns": "ip-10-0-2-196.ec2.internal",
            "private_ip": "10.0.2.196",
            "public_dns": "ec2-18-232-143-213.compute-1.amazonaws.com",
            "public_ip": "18.232.143.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-eip-3",
              "Project": "daysi"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:internet-gateway/igw-09e9bba3df7867ce5",
            "id": "igw-09e9bba3df7867ce5",
            "owner_id": "672626785844",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-igw",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-igw",
              "Project": "daysi"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bb3ad3332f4fc9b",
            "association_id": "eipassoc-05f04b8b2260b97f5",
            "connectivity_type": "public",
            "id": "nat-0f79bab09424a44fb",
            "network_interface_id": "eni-0498e645b817e7cfa",
            "private_ip": "10.0.0.58",
            "public_ip": "54.221.218.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6b24a0dc6303792",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-1",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a88fcb9b36ea06c",
            "association_id": "eipassoc-07bd5a0689ecbd0f6",
            "connectivity_type": "public",
            "id": "nat-02d0cc82d3064feb7",
            "network_interface_id": "eni-05366248328121faa",
            "private_ip": "10.0.1.229",
            "public_ip": "100.50.165.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ded5e059731352ba",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-2",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cd0a81961f9eff1",
            "association_id": "eipassoc-0a170f1fb4bb68565",
            "connectivity_type": "public",
            "id": "nat-0aba9bd5e5a060581",
            "network_interface_id": "eni-0df3376259a1e6e2b",
            "private_ip": "10.0.2.196",
            "public_ip": "18.232.143.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-056f9cd7c771e62e4",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-nat-3",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ffec04982cc6968f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f79bab09424a44fb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ffec04982cc6968f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a00e1c71f232e171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02d0cc82d3064feb7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a00e1c71f232e17",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f678bb1d64b731a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aba9bd5e5a060581",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f678bb1d64b731a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e9bba3df7867ce5",
            "id": "r-rtb-069e32b860d7d253b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-069e32b860d7d253b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-0ffec04982cc6968f",
            "id": "rtb-0ffec04982cc6968f",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f79bab09424a44fb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-1",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-1",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-01a00e1c71f232e17",
            "id": "rtb-01a00e1c71f232e17",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02d0cc82d3064feb7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-2",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-2",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-0f678bb1d64b731a9",
            "id": "rtb-0f678bb1d64b731a9",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aba9bd5e5a060581",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-3",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-rt-3",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:route-table/rtb-069e32b860d7d253b",
            "id": "rtb-069e32b860d7d253b",
            "owner_id": "672626785844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e9bba3df7867ce5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-rt",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-rt",
              "Project": "daysi"
            },
            "timeouts": null,
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb10e865e609844a",
            "route_table_id": "rtb-0ffec04982cc6968f",
            "subnet_id": "subnet-06c79fb9993369fa3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0178619e2b18be787",
            "route_table_id": "rtb-01a00e1c71f232e17",
            "subnet_id": "subnet-05af0e335e1398081"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6a4eaf2f9f7eb9d",
            "route_table_id": "rtb-0f678bb1d64b731a9",
            "subnet_id": "subnet-054872ac0c46f39a7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bff702d8dc85d6dd",
            "route_table_id": "rtb-069e32b860d7d253b",
            "subnet_id": "subnet-0a6b24a0dc6303792"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070875cd2dba1ee73",
            "route_table_id": "rtb-069e32b860d7d253b",
            "subnet_id": "subnet-0ded5e059731352ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f647613aeb2842cd",
            "route_table_id": "rtb-069e32b860d7d253b",
            "subnet_id": "subnet-056f9cd7c771e62e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-06c79fb9993369fa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c79fb9993369fa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1a",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1a",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-05af0e335e1398081",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05af0e335e1398081",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1b",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1b",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-054872ac0c46f39a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054872ac0c46f39a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1c",
              "Project": "daysi",
              "Type": "private"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-private-us-east-1c",
              "Project": "daysi",
              "Type": "private"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0a6b24a0dc6303792",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b24a0dc6303792",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1a",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1a",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-0ded5e059731352ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded5e059731352ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1b",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1b",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:subnet/subnet-056f9cd7c771e62e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f9cd7c771e62e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672626785844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1c",
              "Project": "daysi",
              "Type": "public"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-public-us-east-1c",
              "Project": "daysi",
              "Type": "public"
            },
            "vpc_id": "vpc-06eb1211592a51551"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672626785844:vpc/vpc-06eb1211592a51551",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b63780fbf7a7d1a3",
            "default_route_table_id": "rtb-09144ec67f880aa57",
            "default_security_group_id": "sg-0fe145187f806c557",
            "dhcp_options_id": "dopt-02d66f5192ce963d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06eb1211592a51551",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09144ec67f880aa57",
            "owner_id": "672626785844",
            "tags": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-vpc",
              "Project": "daysi"
            },
            "tags_all": {
              "CostCenter": "daysi",
              "Environment": "nonprod",
              "ManagedBy": "terraform",
              "Module": "vpc",
              "Name": "daysi-nonprod-vpc",
              "Project": "daysi"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}